src/css/pages/home.scss
@import '../utils/vars';
@import '../utils/colors';
@import '../utils/type';
@import '../utils/functions';
@import '../utils/mixins';

.tuf-section-title {
  font-size: rem(60);
  color: transparentize($tuf-color-secondary, .7);
  font-weight: $tuf-font-weight-bold;

  @media only screen and (min-width: rem(768)) {
    font-size: rem(100);
  }

  @media only screen and (min-width: rem(1024)) {
    font-size: rem(120);
  }
}

.tuf-home-hero {
  position: relative;
  display: flex;

  flex-direction: column;

  justify-content: space-between;

  width: 100%;
  min-height: rem(530);

  margin-top: rem(88);

  @media (min-width: rem(768)) {
    flex-direction: row;
  }

  @media (min-width: rem(1024)) {
    margin-top: rem(132);
  }

  &__bg {
    position: absolute;
    top: 50%;
    left: 50%;

    max-width: rem(280);

    transform: translate(-50%, -50%);

    @media (min-width: rem(768)) {
      max-width: rem(380);
    }

    @media (min-width: rem(1024)) {
      max-width: rem(465);
    }
  }

  &__cta {
    margin-top: rem(40);
    text-align: center;

    @media (min-width: rem(768)) {
      margin-top: rem(64);
    }
  }

  &__cta__link {
    display: inline-block;
  }

  &__header {
    font-size: rem(40);

    line-height: 1.25;

    max-width: rem(542);

    color: $tuf-color-white;

    margin-top: 0;

    @media only screen and (min-width: rem(1024)) {
      max-width: rem(640);
      font-size: rem(60);
      margin-top: rem(90);
    }

    @media only screen and (min-width: rem(1200)) {
      font-size: rem(80);
      margin-top: rem(104);
    }
  }

  &__footnote {
    display: flex;

    flex-direction: column;

    justify-content: flex-end;

    margin-bottom: 0;

    color: $tuf-color-white;

    font-size: rem(16);

    font-weight: $tuf-font-weight-light;

    line-height: 1.5;

    @media only screen and (min-width: rem(768)) {
      font-size: rem(18);
    }

    @media only screen and (min-width: 1024px) {
      max-width: rem(252);
      font-size: rem(24);
      margin-bottom: rem(48);
    }

    &-highlight {
      color: $tuf-color-turqoise;

      font-size: rem(30);

      font-weight: $tuf-font-weight-bold;

      line-height: 1;

      @media only screen and (min-width: rem(768)) {
        font-size: rem(40);
      }

      @media only screen and (min-width: rem(1024)) {
        font-size: rem(60);

        margin-top: rem(16);
      }
    }
  }
}

.tuf-home-mission {
  display: flex;

  flex-direction: column;

  color: $tuf-color-white;

  line-height: 1.5;

  h2 {
    font-size: rem(30);

    flex-basis: 30%;

    margin-bottom: rem(24);
  }

  p {
    flex-basis: 70%;
    font-size: rem(18);
    font-weight: $tuf-font-weight-light;
  }

  @media (min-width: rem(768)) {
    flex-direction: row;

    align-items: center;

    max-width: rem(640);

    h2 {
      margin-bottom: 0;
    }

    p {
      margin-left: rem(32);
    }
  }
}

.tuf-home-clients {
  $grid-size: rem(24);
  $grid-rows: 4;

  &__carousel::before {
    display: block;
    content: '';

    width: 100%;

    margin-top: rem(-35);

    @media (min-width: rem(1024)) {
      margin-top: rem(-65);
    }
  }

  &__list,
  &__list-items,
  &__list-bg {
    width: 100%;
    height: calc((#{$grid-size} * #{$grid-rows}) + #{rem(1)});
  }

  &__list-bg {
    position: absolute;

    bottom: 0;
    left: 0;

    display: block;

    width: calc(100% - (#{rem(16)} * 2));

    margin: 0 rem(16);

    background-size: $grid-size $grid-size;
    background-image:
      linear-gradient(to right, transparentize($tuf-color-secondary, .8) rem(1), transparent rem(1)),
      linear-gradient(to bottom, transparentize($tuf-color-secondary, .8) rem(1), transparent rem(1));


    @media (min-width: rem(600)) {
      width: calc(100% - (#{rem(32)} * 2));
      margin: 0 rem(32);
    }

    @media (min-width: rem(1024)) {
      width: calc(100% - (#{rem(48)} * 2));
      margin: 0 rem(48);
    }
  }

  &__list-item {
    display: flex;

    align-items: center;
    justify-content: center;

    img {
      width: auto;
      height: rem(46);
    }
  }
}

.tuf-home-testimonials {
  &-section {
    width: 100%;
  }

  &__list {
    margin: 0 auto;

    &-paginations {
      bottom: rem(-32);

      .glide__bullet {
        background-color: transparentize($tuf-color-secondary, .7);
      }

      .glide__bullet--active {
        background-color: $tuf-color-turqoise;
      }
    }

    &-item {
      blockquote {
        font-size: rem(18);
      }

      blockquote p {
        margin-bottom:  rem(24);

        text-align: center;

        font-weight: $tuf-font-weight-bold;

        color: $tuf-color-turqoise;
      }

      blockquote footer {
        font-weight: $tuf-font-weight-light;

        color: $tuf-color-white;

        text-align: right;

        @media (min-width: rem(1024)) {
          text-align: center;
        }
      }

      blockquote p::before {
        content: '\201C';
      }

      blockquote p::after {
        content: '\201D';
      }
    }

    @media (min-width: rem(728)) {
      max-width: rem(640);
    }
  }
}

.tuf-home-what-we-do {
  &__list {
    width: 100%;

    max-width: rem(1440);

    padding: $tuf-content-padding;

    @media (min-width: rem(600)) {
      padding: $tuf-content-padding-t;
    }

    @media (min-width: rem(1024)) {
      padding: $tuf-content-padding-d;
    }
  }

  &__list-items {
    display: flex;

    flex-direction: row;

    flex-wrap: nowrap;

    justify-content: space-between;

    align-items: stretch;
  }

  &__list-item {
    position: relative;
    width: 100%;

    height: auto;

    @media (min-width: rem(768)) {
      width: calc((100% - (#{rem(24)} * 3)) / 4);
    }

    &__card {
      display: flex;

      flex-direction: column;

      width: 100%;
      height: 100%;

      box-sizing: border-box;

      padding: rem(24);

      border: rem(1) solid transparentize($tuf-color-secondary, .6);

      &__title,
      &__content,
      &__footnote,
      &__link {
        color: $tuf-color-white;
      }

      &__content,
      &__footnote {
        font-weight: $tuf-font-weight-regular;
      }

      &__title {
        margin: rem(24) 0;

        font-size: rem(30);

        line-height: 1.2;
      }

      &__content {
        margin-bottom: rem(24);
        font-size: rem(18);
      }

      &__footnote {
        font-size: rem(16);

        margin-bottom: rem(64);
      }

      &__link {
        position: absolute;

        display: flex;

        align-items: center;

        bottom: rem(24);
        left: 0;

        width: 100%;
        height: rem(40);

        padding: 0 rem(24);

        background-color: transparent;

        border: 0;

        font-size: rem(18);

        font-weight: $tuf-font-weight-medium;

        &__icon {
          display: flex;

          align-items: center;
          justify-content: center;

          width: rem(40);
          height: rem(40);

          margin-right: rem(16);

          border: rem(2) solid $tuf-color-clickable;
          border-radius: rem(40);
        }

        svg {
          width: rem(24);
          height: rem(24);

          color: $tuf-color-clickable;
        }
      }
    }
  }
}

